implement crawling function
